fix(sync): use the configmap revision number as a deployment number
https://gravitee.atlassian.net/browse/APIM-11650